Implemented interaction with iframe

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -3,4 +3,30 @@
 <tr><td>Page opened!</td></tr>
 <tr><td>User does not need to select a color.</td></tr>
 <tr><td>User does not need to select a color.</td></tr>
+<tr><td>Create driver: chrome</td></tr>
+<tr><td>Opening page: https://eu.wahoofitness.com/</td></tr>
+<tr><td>Page opened!</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>Create driver: chrome</td></tr>
+<tr><td>Opening page: https://eu.wahoofitness.com/</td></tr>
+<tr><td>Page opened!</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>economyShippingCost = 0.0</td></tr>
+<tr><td>expressShippingCost = 50.0</td></tr>
+<tr><td>Create driver: chrome</td></tr>
+<tr><td>Opening page: https://eu.wahoofitness.com/</td></tr>
+<tr><td>Page opened!</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>economyShippingCost = 0.0</td></tr>
+<tr><td>expressShippingCost = 50.0</td></tr>
+<tr><td>Create driver: chrome</td></tr>
+<tr><td>Opening page: https://eu.wahoofitness.com/</td></tr>
+<tr><td>Page opened!</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>User does not need to select a color.</td></tr>
+<tr><td>economyShippingCost = 0.0</td></tr>
+<tr><td>expressShippingCost = 50.0</td></tr>
 </table>
