--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ca58e">  <td>21/05/28 16:55:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationTest.method()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">method</td> 
-  <td>main@760357227</td>   <td></td> </tr>
-<tr bgcolor="bd777f">  <td>21/05/28 16:55:22</td>   <td>-1914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&gt;&gt;setup</td> 
+<tr bgcolor="bd777f">  <td>21/06/02 15:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
-<tr bgcolor="bd777f">  <td>21/05/28 16:55:55</td>   <td>30856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bd777f">  <td>21/06/02 15:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>21/06/02 15:39:22</td>   <td>-55491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationTest.method()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">method</td> 
+  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:39:21</td>   <td>-56775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>21/06/02 15:39:22</td>   <td>-55491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationTest.method()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">method</td> 
+  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>21/06/02 15:39:22</td>   <td>-55491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationTest.method()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">method</td> 
+  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:39:21</td>   <td>-56775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:39:21</td>   <td>-56775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>21/06/02 15:39:22</td>   <td>-55491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationTest.method()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">method</td> 
+  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:39:21</td>   <td>-56775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>21/06/02 15:39:22</td>   <td>-55491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationTest.method()[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">method</td> 
+  <td>main@760357227</td>   <td></td> </tr>
+<tr bgcolor="bd777f">  <td>21/06/02 15:39:21</td>   <td>-56775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.wahooFitness.eu.automationTest.AutomationTest@4944252c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@760357227</td>   <td></td> </tr>
 </table>
